--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectKey=SB_final_project
 sonar.projectName=final_project
 sonar.projectVersion=1.0
 
-sonar.sources=src/main,src/main/resources
+sonar.sources=src/main 
 sonar.tests=src/test
