--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 
-sonar.projectKey=SB_final_project
-sonar.projectName=final_project
-sonar.projectVersion=1.0
+# sonar.projectKey=SB_final_project
+# sonar.projectName=final_project
+# sonar.projectVersion=1.0
 
-sonar.sources=src/main 
-sonar.tests=src/test
+# sonar.sources=src/main 
+# sonar.tests=src/test
