--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,9 @@
 sonar.projectKey=SB_final_project
 sonar.projectName=final_project
 sonar.projectVersion=1.0
+sonar.java.binaries=.
+sonar.exclusions=build/**
 
-sonar.sources=src/main 
-sonar.tests=src/test
+
+
 #this is  testing the defaults
