--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 
-sonar.projectKey=SB_final_project
+sonar.projectKey=com.webapp:final_project
 sonar.projectName=final_project
 sonar.projectVersion=1.0
 sonar.java.binaries=.
